--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@supabase/supabase-js": "^1.35.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
     "react-supabase": "^0.2.0"
   },
   "devDependencies": {
