--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.2",
     "@supabase/supabase-js": "^1.35.3",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.1.5",
     "react-redux": "^8.0.2",
-    "react-supabase": "^0.2.0"
+    "react-supabase": "^0.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
