--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^1.35.3",
     "lodash": "^4.17.21",
     "next": "12.1.6",
+    "node-html-parser": "^5.3.3",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
